[gd_scene load_steps=9 format=3 uid="uid://75n3eki31qmq"]

[ext_resource type="Script" path="res://LightbearerScene.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dq0bd4xfylwue" path="res://Kael.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Villager.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bp5b48txpng4s" path="res://Shadow.tscn" id="3_yase7"]
[ext_resource type="PackedScene" uid="uid://uhjg44ucpntj" path="res://UI.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cohtlh5xw77ry" path="res://ShadowMonarch.tscn" id="4_07olt"]
[ext_resource type="PackedScene" path="res://EnergyPickup.tscn" id="6_5nhtk"]

[sub_resource type="RectangleShape2D" id="GroundCollisionShape"]
size = Vector2(3000, 48)

[node name="LightbearerScene" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(100, 324)
enabled = false
limit_left = 576
limit_top = 0
limit_right = 2424
limit_bottom = 648

[node name="GameWorld" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="GameWorld"]
offset_right = 3000.0
offset_bottom = 648.0
color = Color(0.1, 0.05, 0.3, 1)

[node name="Ground" type="StaticBody2D" parent="GameWorld"]

[node name="GroundCollision" type="CollisionShape2D" parent="GameWorld/Ground"]
position = Vector2(1500, 624)
shape = SubResource("GroundCollisionShape")

[node name="GroundRect" type="ColorRect" parent="GameWorld/Ground"]
offset_top = 600.0
offset_right = 3000.0
offset_bottom = 648.0
color = Color(0.3, 0.3, 0.4, 1)

[node name="Characters" type="Node2D" parent="GameWorld"]

[node name="Kael" parent="GameWorld/Characters" instance=ExtResource("2")]
position = Vector2(100, 600)

[node name="Camera2D" type="Camera2D" parent="GameWorld/Characters/Kael"]
limit_left = 0
limit_top = 0
limit_right = 3000
limit_bottom = 650

[node name="Enemies" type="Node2D" parent="GameWorld"]

[node name="Shadow" parent="GameWorld/Enemies" instance=ExtResource("3_yase7")]
position = Vector2(406, 600)

[node name="Shadow2" parent="GameWorld/Enemies" instance=ExtResource("3_yase7")]
position = Vector2(1008, 600)

[node name="Shadow3" parent="GameWorld/Enemies" instance=ExtResource("3_yase7")]
position = Vector2(676, 600)

[node name="Shadow4" parent="GameWorld/Enemies" instance=ExtResource("3_yase7")]
position = Vector2(1248, 600)

[node name="ShadowMonarch" parent="GameWorld/Enemies" instance=ExtResource("4_07olt")]
position = Vector2(1545, 600)

[node name="Villagers" type="Node2D" parent="GameWorld"]

[node name="Villager1" parent="GameWorld/Villagers" instance=ExtResource("3")]
position = Vector2(2010, 600)

[node name="Villager2" parent="GameWorld/Villagers" instance=ExtResource("3")]
position = Vector2(2140, 600)

[node name="Villager3" parent="GameWorld/Villagers" instance=ExtResource("3")]
position = Vector2(2263, 600)

[node name="PickUp" type="Node2D" parent="GameWorld"]
position = Vector2(-29, -4)

[node name="EnergyPickup" parent="GameWorld/PickUp" instance=ExtResource("6_5nhtk")]
position = Vector2(275, 499)

[node name="EnergyPickup2" parent="GameWorld/PickUp" instance=ExtResource("6_5nhtk")]
position = Vector2(877, 499)

[node name="EnergyPickup3" parent="GameWorld/PickUp" instance=ExtResource("6_5nhtk")]
position = Vector2(1426, 499)

[node name="EnergyPickup4" parent="GameWorld/PickUp" instance=ExtResource("6_5nhtk")]
position = Vector2(1165, 499)

[node name="UI" parent="." instance=ExtResource("4")]
